--- a/packages/cra-template-typescript/package.json
+++ b/packages/cra-template-typescript/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "cra-template-typescript",
-  "version": "1.0.1",
+  "name": "@rafw87/cra-template-typescript",
+  "version": "0.0.0",
+  "private": false,
   "keywords": [
     "react",
     "create-react-app",
     "template",
     "typescript"
   ],
-  "description": "The base TypeScript template for Create React App.",
+  "description": "The TypeScript template for Create React App with ESLint and Prettier.",
   "main": "template.json",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
+    "url": "https://github.com/rafw87/cra-templates.git",
     "directory": "packages/cra-template-typescript"
   },
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "engines": {
-    "node": ">=8.10"
+    "node": ">=10"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/rafw87/cra-templates/issues"
   },
   "files": [
     "template",
